@@ -7,7 +7,7 @@ GEN_ZONE(main) {
 	DISCARD = ("samples", "doc", "tests")
 	PMKFILE = TRUE
 	PMKNAME = "pmkfile.scan"
-	CFGNAME = "config.h.scan"
+	CFGNAME = "compat/config.h.scan"
 	MAKEFILE = TRUE
 	MKFNAME = "Makefile.scan"
 	EXTRATAG = ("CONFDIR", "PRIVSEP_USER")
